--- a/index.html
+++ b/index.html
@@ -22,70 +22,57 @@
 	<!-- Place favicon.ico and apple-touch-icon.png in root directory -->
 		
 	<link href="css/style.css" rel="stylesheet" />
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:700,300' rel='stylesheet' type='text/css'>
 </head>
 
-<body>
-	<header>
-		<div class="g1">
-			<h1>Fluid Baseline Grid</h1>
-		</div>
-		<div class="g2">
-			<h5>The path of the righteous man is beset on all sides by the iniquities of the selfish and the tyranny of evil men.</h5>
-		</div>
-		<div class="g2">
-			<p>Blessed is he who, in the name of charity and good will, shepherds the weak through the valley of darkness, for he is truly his brother's keeper and the finder of lost children. And I will strike down upon thee with great vengeance and furious anger those who would attempt to poison and destroy My brothers. And you will know My name is the Lord when I lay My vengeance upon thee.</p>
-		</div>
-		<div class="g1">
-			<p>Blesssfgagweged is he who, in the name of charity and good will, shepherds the weak through the valley of darkness, for he is truly his brother's keeper and the finder of lost children. And I will strike down upon thee with great vengeance and furious anger those who would attempt to poison and destroy My brothers. And you will know My name is the Lord when I lay My vengeance upon thee.</p>
-		</div>
-		<div class="g1">
-			<p>Blesssfgagweged is he who, in the name of charity and good will, shepherds the weak through the valley of darkness, for he is truly his brother's keeper and the finder of lost children. And I will strike down upon thee with great vengeance and furious anger those who would attempt to poison and destroy My brothers. And you will know My name is the Lord when I lay My vengeance upon thee.</p>
-		</div>
-		<div class="g1">
-			<p>Blesssfgagweged is he who, in the name of charity and good will, shepherds the weak through the valley of darkness, for he is truly his brother's keeper and the finder of lost children. And I will strike down upon thee with great vengeance and furious anger those who would attempt to poison and destroy My brothers. And you will know My name is the Lord when I lay My vengeance upon thee.</p>
-		</div>
-	</header>
-	<div class="cf"></div>
-	<div id="content">
-		<div class="g1">
-			<h3>Is she dead, yes or no?</h3>
-			<p>Now that there is the Tec-9, a crappy spray gun from South Miami. This gun is advertised as the most popular gun in American crime. Do you believe that shit? It actually says that in the little book that comes with it: the most popular gun in American crime. Like they're actually proud of that shit.</p>
-		</div>
-		<div class="g1">
-			<h3>I'm serious as a heart attack</h3>
-			<p>Do you see any Teletubbies in here? Do you see a slender plastic tag clipped to my shirt with my name printed on it? Do you see a little Asian child with a blank expression on his face sitting outside on a mechanical helicopter that shakes when you put quarters in it? That's what you see at a toy store.</p>
-		</div>
-		<div class="g1">
-			<h3>Uuummmm, this is a tasty burger!</h3>
-			<p>Now that we know who you are, I know who I am. I'm not a mistake! It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me! I should've known way back when.</p>
-		</div>
-		<div class="g2">
-			<h3>Your bones don't break, mine do</h3>
-			<p>Well, the way they make shows is, they make one show. That show's called a pilot. Then they show that show to the people who make shows, and on the strength of that one show they decide if they're going to make more shows. Some pilots get picked and become television programs. Some don't, become nothing. She starred in one of the ones that became nothing.</p>
-		</div>
-		<div class="g1">
-			<h3>I can do that</h3>
-			<p>My money's in that office, right? If she start giving me some bullshit about it ain't there, and we got to go someplace else and get it, I'm gonna shoot you in the head then and there.</p>
-		</div>
-		<div class="g3">
-			<h3>Shoot that bitch in the kneecaps</h3>
-			<p>Normally, both your asses would be dead as fucking fried chicken, but you happen to pull this shit while I'm in a transitional period so I don't wanna kill you, I wanna help you. But I can't give you this case, it don't belong to me. Besides, I've already been through too much shit this morning over this case to hand it over to your dumb ass.</p>
-		</div>
-	</div>
-	<footer class="g3 cf">
-		<small>2011 <span class="license">Created by <a href="http://twitter.com/thedayhascome">Josh Hopkins</a> <span class="amp">&amp;</span> <a href="http://40horse.com">40 Horse</a></span>. Released under <a href="http://unlicense.org">Unlicense</a>. Text provided by <a href="http://slipsum.com/">Samuel L. Ipsum</a>.</small>
-	</footer>
-
+<body id="index">
+	
+	<section id="galleries">
+		<h1>Galleries</h1>
+		<ul></ul>
+	</section>
+	
 	<!-- JavaScript at the bottom for fast page loading -->
 
 	<!-- Minimized jQuery from Google CDN -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
-
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+	
 	<!-- HTML5 IE Enabling Script -->
 	<!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 	
 	<!-- CSS3 Media Queries -->
 	<script src="js/respond.min.js"></script>
+	<script src="js/jsrender.js" type="text/javascript"></script>
+	
+	<script id="galleryItemTemplate" type="text/x-jsrender">
+		<li class="galleryItem">
+			<a href="/flow.html#{{:url}}" style="background-image: url({{: ~imageUrl(url, thumb) }})"><span>{{:name}}</span></a>
+		</li>
+	</script>
+
+<script>
+	
+		$(document).ready(function() {
+			
+			$.views.helpers({
+		 		imageUrl: function(name, thumb) {
+					return "/galleries/" + name + "/preview/" + thumb;
+				}
+			});
+	
+	
+			jQuery.getJSON("galleries/list.json", function(data) {
+				$("#galleries ul").html($("#galleryItemTemplate").render(data.galleries));					
+				$(document.body).css("background-image", "url(" + $.views.helpers.imageUrl(data.background.gallery, data.background.image) + ")");
+				
+			}).fail(function(request, type, errorThrown) {
+				if(console && console.log) {
+					console.log("ERROR: " + errorThrown);
+				}
+			});
+		});
+		
+	</script>		
 	
 </body>
 </html>
