--- a/index.html
+++ b/index.html
@@ -1,15 +1,7 @@
 <!DOCTYPE html>
-
 <html>
 <head>
-	<!--
-	*****************************************************************
-	Fluid Baseline Grid v1.0.0
-	Designed & Built by Josh Hopkins and 40 Horse, http://40horse.com
-	Licensed under Unlicense, http://unlicense.org/
-	*****************************************************************
-	-->
-	<title>Fluid Baseline Grid - A sensible HTML5 and CSS3 development kit</title>
+	<title>Bjoern Weide - Photos</title>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 	<meta name="description" content="" />
@@ -32,14 +24,9 @@
 		<ul></ul>
 	</section>
 	
-	<!-- JavaScript at the bottom for fast page loading -->
-
-	<!-- Minimized jQuery from Google CDN -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-	
 	<!-- HTML5 IE Enabling Script -->
 	<!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-	
 	<!-- CSS3 Media Queries -->
 	<script src="js/respond.min.js"></script>
 	<script src="js/jsrender.js" type="text/javascript"></script>
@@ -59,7 +46,6 @@
 					return "/galleries/" + name + "/preview/" + thumb;
 				}
 			});
-	
 	
 			jQuery.getJSON("galleries/list.json", function(data) {
 				$("#galleries ul").html($("#galleryItemTemplate").render(data.galleries));					
