Final tweaks for index.

--- a/flow.html
+++ b/flow.html
@@ -13,6 +13,7 @@
 			</section>
 			<ul id="photolist"></ul>
 		</section>
+		<canvas></canvas>
 		<section id="lightbox-container" style="display: none"></section>
 		<section id="lightbox" style="display: none"></section>
 		<!-- JavaScript at the bottom for fast page loading -->
@@ -25,6 +26,9 @@
 		<script src="js/urlparam.js"></script>
 		<script src="js/displaypicture.js"></script>
 		<script src="js/photoloader.js"></script>
+		<script src="js/stackblur.js"></script>
+		<script src="js/html2canvas.min.js"></script>
+		<script src="js/jquery.plugin.html2canvas.js"></script>
 		<script>
 			$(document).ready(function() {
 
